@@ -3,7 +3,8 @@
 	* maintainer/README: New file.
 
 	* run-autogen.sh:
-	* run-distcheck.sh: Move to maintainer/.
+	* run-distcheck.sh:
+	* tools/check-po.sh: Move to maintainer/.
 
 2014-01-27 Pierre Wieser <pwieser@trychlos.org>
 
